Fix for video size on mobile

--- a/web/themes/custom/myusf/sass/src/partials/_components.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_components.scss
@@ -1272,7 +1272,7 @@ content: "";
 	.modal-dialog {
     	max-width:75%;
 
-    	@include media-breakpoint-only(phone) {
+    	@include media-breakpoint-down(landscape_phone) {
 				max-width:100%;
 			}	
 	}
